fix: the shortcut key is WordWrap in the welcome page
fix: if there are many tabs, the scrollbar will appear

fix: change "select a localization language" notificationPanel message right to left display

fix: Increase the readability of small samples in the Workbench of the Storybook

--- a/src/components/scrollable/style.scss
+++ b/src/components/scrollable/style.scss
@@ -20,6 +20,5 @@ $react-custom-scrollbars: '.ScrollbarsCustom';
     &-Scroller,
     &-Content,
     &-Wrapper {
-        height: 100%;
     }
 }
