--- a/src/workbench/notification/style.scss
+++ b/src/workbench/notification/style.scss
@@ -46,6 +46,7 @@ $icon-size: 22px;
             padding-right: 30px;
             position: relative;
             text-align: left;
+            direction: ltr;
         }
     }
 
